syntax = "proto3";
package cores;

option go_package = "github.com/snple/kokomi/pb/cores;cores";

import "generic_message.proto";

message Route {
    string id = 1;
    string name = 2;
    string desc = 3;
    string tags = 4;
    string type = 5;
    string src = 6;
    string dst = 7;
    string config = 8;
    sint32 status = 9;
    int64 created = 10;
    int64 updated = 11;
    int64 deleted = 12;
}

message ListRouteRequest {
    pb.Page page = 1;
    string src = 2;
    string dst = 3;
    string tags = 4;
    string type = 5;
}

message ListRouteResponse {
    pb.Page page = 1;
    uint32 count = 2;
    repeated Route route = 3;
}

service RouteService {
    rpc Create(Route) returns (Route) {}
    rpc Update(Route) returns (Route) {}
    rpc View(pb.Id) returns (Route) {}
    rpc ViewByName(pb.Name) returns (Route) {}
    rpc Delete(pb.Id) returns (pb.MyBool) {}
    rpc List(ListRouteRequest) returns (ListRouteResponse) {}
}
