syntax = "proto3";
package edges;

option go_package = "snple.com/kokomi/pb/edges;edges";

import "generic_message.proto";

message DataUploadRequest {
    string id = 1;
    int32 content_type = 2;
    bytes content = 3;
    bool cache = 4;
    // bool save = 5;
    // string device_id = 6;
}

message DataUploadResponse {
    string id = 1;
    string message = 2;
}

message DataQueryRequest {
    string flux = 1;
    map<string, string> vars = 2;
}

message DataQueryTagRequest {
    string id = 1;
    map<string, string> vars = 2;
}

service DataService {
    rpc Upload(DataUploadRequest) returns (DataUploadResponse) {}
    rpc Compile(DataQueryRequest) returns (pb.Message) {}
    rpc Query(DataQueryRequest) returns (stream pb.Message) {}
    rpc QueryTag(DataQueryTagRequest) returns (stream pb.Message) {}
}
